add id to required fields in Group DTOs and refactored some "dirty code"