@@ -20,7 +20,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,7 +32,7 @@ public class TopicServiceImpl implements TopicService {
     @Override
     public List<ListTopicDTO> findAll() {
         List<Topic> topics = topicRepository.findAll();
-        return topics.stream().map(topicMapper::toListDTO).collect(Collectors.toList());
+        return topics.stream().map(topicMapper::toListDTO).toList();
     }
 
     @Override
@@ -99,7 +98,7 @@ public class TopicServiceImpl implements TopicService {
 
                 totalDuration[0] += section.getDuration();
                 return sectionDTO;
-            }).collect(Collectors.toList());
+            }).toList();
 
             unitDTO.setUnitSections(unitSectionDTOs);
             unitDTO.setTotalDurationClassMeeting(totalDurationClassMeeting[0]);
@@ -107,7 +106,7 @@ public class TopicServiceImpl implements TopicService {
             unitDTO.setTotalDurationProductIncrement(totalDurationProductIncrement[0]);
             unitDTO.setTotalDuration(totalDuration[0]);
             return unitDTO;
-        }).collect(Collectors.toList());
+        }).toList();
 
         dto.setUnits(unitDTOs);
 
@@ -118,12 +117,11 @@ public class TopicServiceImpl implements TopicService {
             assessmentDTO.setWeightedNumber(assessment.getWeightedNumber());
             assessmentDTO.setNote(assessment.getNote());
             return assessmentDTO;
-        }).collect(Collectors.toList());
+        }).toList();
 
         dto.setTopicAssessments(assessmentDTOs);
         return dto;
     }
-
 
 
 }
